--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-scripts": "3.4.0",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
